database is set

--- a/MiniCourseProject/Homies/Views/Event/Details.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/Details.cshtml
@@ -15,7 +15,7 @@
             <p class="mb-0"><span class="fw-bold">Estimated ending time: </span>@Model.End</p>
             <p class="mb-0"><span class="fw-bold">Organiser: </span>@Model.Organiser</p>
             <p class="mb-0"><span class="fw-bold">Created on: </span>@Model.CreatedOn</p>
-            <p class="mb-0"><span class="fw-bold">Type: </span>@Model.Type</p>
+            <p class="mb-0"><span class="fw-bold">Category: </span>@Model.Category</p>
         </div>
 
         <a asp-controller="Event" asp-action="All" class="btn btn-warning mb-2 w-100 p-3 fw-bold">Back to All Events</a>
