--- a/MiniCourseProject/Homies/Views/Event/Joined.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/Joined.cshtml
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <h5 class="card-title mt-1">@e.Name</h5>
                 <p class="mb-0"><span class="fw-bold">Starting time: </span>@e.Start</p>
-                <p class="mb-0"><span class="fw-bold">Type: </span>@e.Type</p>
+                <p class="mb-0"><span class="fw-bold">Category: </span>@e.Category</p>
             </div>
 
             @if (User.Identity.Name == e.Organiser)
