--- a/MiniCourseProject/Homies/Views/Event/Add.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/Add.cshtml
@@ -30,14 +30,14 @@
                 <span asp-validation-for="@Model.End" class="text-danger"></span>
             </div>
             <div class="mb-3">
-                <label asp-for="@Model.TypeId" class="form-label-add-edit">Type of event</label>
-                <select asp-for="@Model.TypeId" class="form-control" aria-required="true">
-                    @foreach (var type in Model.Types)
+                <label asp-for="@Model.CategoryId" class="form-label-add-edit">Category of event</label>
+                <select asp-for="@Model.CategoryId" class="form-control" aria-required="true">
+                    @foreach (var type in Model.Categorys)
                     {
                         <option value="@type.Id">@type.Name</option>
                     }
                 </select>
-                <span asp-validation-for="@Model.TypeId" class="text-danger"></span>
+                <span asp-validation-for="@Model.CategoryId" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <input class="btn btn-warning mb-2 w-100 p-3 fw-bold" type="submit" value="Add" />
