--- a/MiniCourseProject/Homies/Views/Event/All.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/All.cshtml
@@ -13,7 +13,7 @@
             <div class="card-body">
                 <h5 class="card-title mt-1">@e.Name</h5>
                 <p class="mb-0"><span class="fw-bold">Starting time: </span>@e.Start</p>
-                <p class="mb-0"><span class="fw-bold">Type: </span>@e.Type</p>
+                <p class="mb-0"><span class="fw-bold">Category: </span>@e.Category</p>
             </div>
 
             <a asp-controller="Event" asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">View Details</a>
