--- a/MiniCourseProject/Homies/Views/Event/All.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/All.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Homies.Data.Models
+@using Microsoft.AspNetCore.Identity;
 @model IEnumerable<AllEventViewModel>
 @{
     ViewBag.Title = "All of the Events Around You";
@@ -19,17 +20,17 @@
             </div>
 
             <a asp-controller="Event" asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">View Details</a>
-            
-           @* @if (User.Identity.Name == e.Organiser.Email)
+
+            @if (User?.Identity?.Name == e.Organiser.UserName)
             {
                 <a asp-controller="Event" asp-action="Edit" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">Edit</a>
-            }*@
-            @*else
+            }
+            else
             {
                 <form class="input-group-sm " asp-controller="Event" asp-action="Join" asp-route-id="@e.Id">
                     <input type="submit" value="Join the Event" class="fs-6 btn btn-warning mb-3 w-100 p-3 fw-bold" />
                 </form>
-            }*@
+            }
         </div>
     }
 </div>
