--- a/MiniCourseProject/Homies/Views/Event/All.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/All.cshtml
@@ -1,6 +1,4 @@
-﻿@using Homies.Data.Models
-@using Microsoft.AspNetCore.Identity;
-@model IEnumerable<AllEventViewModel>
+﻿@model IEnumerable<AllEventViewModel>
 @{
     ViewBag.Title = "All of the Events Around You";
 }
@@ -18,7 +16,7 @@
                 <p class="mb-0"><span class="fw-bold">Starting time: </span>@e.Start</p>
                 <p class="mb-0"><span class="fw-bold">Category: </span>@e.Category</p>
             </div>
-                
+
             <a asp-controller="Event" asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">View Details</a>
 
             @if (User?.Identity?.Name == e.Organiser.UserName)
@@ -27,7 +25,7 @@
             }
             else
             {
-                <form class="input-group-sm " asp-controller="Event" asp-action="Join" asp-route-id="@e.Id">
+                <form class="input-group-sm " asp-controller="Event" asp-action="Join" asp-route-eventId="@e.Id">
                     <input type="submit" value="Join the Event" class="fs-6 btn btn-warning mb-3 w-100 p-3 fw-bold" />
                 </form>
             }
