--- a/MiniCourseProject/Homies/Views/Event/Joined.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/Joined.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model IEnumerable<AllEventViewModel>
+@{
     ViewBag.Title = "Joined Events";
 }
 
-@*
+
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -16,14 +17,14 @@
                 <p class="mb-0"><span class="fw-bold">Category: </span>@e.Category</p>
             </div>
 
-            @if (User.Identity.Name == e.Organiser)
+            @if (User?.Identity?.Name == e.Organiser.UserName)
             {
                 <a asp-controller="Event" asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">View Details</a>
                 <a asp-controller="Event" asp-action="Edit" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">Edit</a>
             }
             else
             {
-                <form class="input-group-sm " asp-controller="Event" asp-action="Leave" asp-route-id="@e.Id">
+                <form class="input-group-sm " asp-controller="Event" asp-action="Leave" asp-route-eventId="@e.Id">
                     <input type="submit" value="Leave the Event" class="fs-6 btn btn-warning mb-3 w-100 p-3 fw-bold" />
                 </form>
                 <a asp-controller="Event" asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">View Details</a>
@@ -34,6 +35,6 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
 
 
