--- a/MiniCourseProject/Homies/Views/Event/Add.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/Add.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model AddEventViewModel
+@{
     ViewBag.Title = "Create a New Event";
 }
 
-@*
+
 <h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
@@ -32,7 +33,7 @@
             <div class="mb-3">
                 <label asp-for="@Model.CategoryId" class="form-label-add-edit">Category of event</label>
                 <select asp-for="@Model.CategoryId" class="form-control" aria-required="true">
-                    @foreach (var type in Model.Categorys)
+                    @foreach (var type in Model.Categories)
                     {
                         <option value="@type.Id">@type.Name</option>
                     }
@@ -49,5 +50,5 @@
 
 @section Scripts {
     <partial name="_ValidationScriptsPartial" />
-}*@
+}
 
