--- a/MiniCourseProject/Homies/Views/Event/Edit.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/Edit.cshtml
@@ -1,8 +1,9 @@
-﻿@{
+﻿@model AddEventViewModel
+@{
     ViewBag.Title = "Edit Info for an Event";
 }
 
-@*<h2 class="text-center">@ViewBag.Title</h2>
+<h2 class="text-center">@ViewBag.Title</h2>
 <hr />
 
 <div class="row">
@@ -20,18 +21,18 @@
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.Start" class="form-label-add-edit">Start</label>
-                <input asp-for="@Model.Start" class="form-control" aria-required="true" value="@DateTime.Parse(Model.Start).ToString("dd/MM/yyyy H:mm")" />
+                <input asp-for="@Model.Start" class="form-control" aria-required="true" value="@Model.Start" />
                 <span asp-validation-for="@Model.Start" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.End" class="form-label-add-edit">End</label>
-                <input asp-for="@Model.End" class="form-control" aria-required="true" value="@DateTime.Parse(Model.End).ToString("dd/MM/yyyy H:mm")" />
+                <input asp-for="@Model.End" class="form-control" aria-required="true" value="@Model.End" />
                 <span asp-validation-for="@Model.End" class="text-danger"></span>
             </div>
             <div class="mb-3">
                 <label asp-for="@Model.CategoryId" class="form-label-add-edit">Category of event</label>
                 <select asp-for="@Model.CategoryId" class="form-control" aria-required="true">
-                    @foreach (var type in Model.Categorys)
+                    @foreach (var type in Model.Categories)
                     {
                             <option value="@type.Id">@type.Name</option>
                     }
@@ -47,4 +48,4 @@
 
 @section Scripts {
         <partial name="_ValidationScriptsPartial" />
-}*@
+}
