--- a/MiniCourseProject/Homies/Views/Event/Joined.cshtml
+++ b/MiniCourseProject/Homies/Views/Event/Joined.cshtml
@@ -24,7 +24,7 @@
             }
             else
             {
-                <form class="input-group-sm " asp-controller="Event" asp-action="Leave" asp-route-eventId="@e.Id">
+                <form class="input-group-sm " asp-controller="Event" asp-action="Leave" asp-route-id="@e.Id">
                     <input type="submit" value="Leave the Event" class="fs-6 btn btn-warning mb-3 w-100 p-3 fw-bold" />
                 </form>
                 <a asp-controller="Event" asp-action="Details" asp-route-id="@e.Id" class="btn btn-warning mb-2 w-100 p-3 fw-bold">View Details</a>
